# epigraphdb_neural

./: .gitmodules  README.md  docker-compose.yml
main_api/: Dockerfile  Makefile  pyproject.toml
main_api/app/: main.py  settings.py
main_api/app/apis/components/: __init__.py
main_api/app/apis/nlp/: __init__.py  models.py
main_api/app/apis/ontology/: __init__.py
main_api/app/apis/query/: __init__.py  embeddings_funcs.py  funcs.py  models.py  text_funcs.py
main_api/app/es/: __init__.py
main_api/app/utils/: __init__.py
main_api/scripts/: check.py  write_ent_embeddings.py
main_api/tests/: test_api_query.py  test_components.py  test_es.py  test_responses.py
models_api/: Dockerfile  Makefile  pyproject.toml
models_api/app/: main.py  settings.py
models_api/app/apis/models/: __init__.py  config.py
models_api/app/apis/nlp/: __init__.py  models.py
models_api/app/funcs/: text_processing.py
models_api/app/nlp_models/: __init__.py  config.py
processing/: Makefile  environment.yml
processing/funcs/: models_api_text_processing.py  utils.py
processing/notebooks/: benchmark-cleaning.ipynb  benchmark-main.ipynb  efo-clean.ipynb  processing.ipynb  test-entity-linker.ipynb  test-triples.ipynb  test-two-stage-mapping.ipynb
processing/resources/: nlp_models.py
processing/scripts/: clean_epigraphdb_ents.py  encode_epigraphdb_ents.py  get_epigraphdb_ents.py
transformers/: Dockerfile  main.py  requirements.txt
